# ml_service

./: .gitignore  Makefile
autotests/: main.py  pyproject.toml
autotests/tests/: conftest.py  test_balance.py  test_history.py  test_ml_requests.py  test_users.py
backend/: .env.example  Dockerfile  Dockerfile.app  Dockerfile.worker  pyproject.toml
backend/common/: pyproject.toml
backend/common/ml_service_common/auth/: __init__.py
backend/common/ml_service_common/fastapi/: __init__.py  exceptions.py  service.py  settings.py  utils.py
backend/common/ml_service_common/fastapi/dependencies/: jwt.py  rate_limiter.py  users.py  utils.py
backend/common/ml_service_common/fastapi/log_filters/: endpoint.py
backend/common/ml_service_common/fastapi/middlewares/: session_id.py
backend/common/ml_service_common/fastapi/schemas/: health.py  paginated.py  storage.py
backend/common/ml_service_common/messaging/: __init__.py  config.py  consumer.py  errors.py  publisher.py  schemas.py  settings.py
backend/common/ml_service_common/pydantic_dto/: __init__.py  dto.py
backend/common/ml_service_common/pydantic_settings/: __init__.py  settings.py
backend/common/ml_service_common/socketio/: __init__.py  exceptions.py  service.py  settings.py
backend/common/ml_service_common/sqlalchemy/: service.py  settings.py
backend/common/ml_service_common/sqlalchemy_alt/: __init__.py  exceptions.py  service.py  settings.py
backend/database/: alembic.ini  pyproject.toml
backend/database/database/: __init__.py  __main__.py  cli.py  exceptions.py  interfaces.py  service.py
backend/database/database/fixtures/: __init__.py  applier.py  autotests.yaml  loader.py  models.py
backend/database/database/migrations/: env.py
backend/database_repository/: pyproject.toml
backend/database_repository/database_repository/: __init__.py  service.py  settings.py
backend/database_repository/database_repository/dto/: __init__.py  ml_model.py  task.py  transaction.py  user.py  wallet.py
backend/database_repository/database_repository/models/: __init__.py  ml_model.py  task.py  transaction.py  user.py  wallet.py
backend/database_repository/database_repository/repositories/: __init__.py  _mappers.py  model.py  users.py  wallet.py
backend/ml_service/: pyproject.toml
backend/ml_service/ml_service/: __init__.py  __main__.py  asgi.py  cli.py  service.py  settings.py
backend/ml_service/ml_service/api/: __init__.py  app.py  deps.py  errors.py  jwt_auth.py  schemas.py  security.py
backend/ml_service/ml_service/domains/: chat.py  document.py  ml_model.py  task.py  transaction.py  user.py  wallet.py
backend/ml_service/ml_service/interfaces/: repositories.py
backend/ml_service/ml_service/messaging/: __init__.py  config.py  predictor.py  publisher.py  schemas.py  worker.py
backend/ml_service/ml_service/services/: balance_service.py  chat_service.py  document_service.py  task_service.py  user_service.py  wallet_service.py
backend/model/: pyproject.toml
backend/model/ml_service_model/: __init__.py  asgi.py  cli.py  service.py  settings.py
backend/model/ml_service_model/api/: __init__.py  router.py  service.py  settings.py
backend/model/ml_service_model/database/: __init__.py  repositories.py  service.py
backend/model/ml_service_model/domains/: __init__.py  stored_model.py  task.py
backend/model/ml_service_model/interfaces/: __init__.py  repositories.py
backend/model/ml_service_model/messaging/: handler.py
backend/model/ml_service_model/services/: __init__.py  task_service.py
backend/model/model/: __init__.py
backend/model/model/domains/: __init__.py  stored_model.py  task.py
backend/model/model/interfaces/: __init__.py  repositories.py
backend/model/model/services/: __init__.py  task_service.py
backend/tests/: conftest.py  test_batch_validation.py  test_bl.py  test_db.py  test_jwt.py  test_messaging.py  test_wallet_refund.py  test_worker_handler.py
backend/users/: pyproject.toml
backend/users/ml_service_users/: __init__.py  __main__.py  asgi.py  cli.py  service.py  settings.py
backend/users/ml_service_users/api/: __init__.py  health.py  router.py  service.py  settings.py
backend/users/ml_service_users/database/: __init__.py  repositories.py  service.py
backend/users/ml_service_users/interfaces/: repositories.py
backend/users/ml_service_users/services/: user_service.py
backend/users/users/: __init__.py
backend/users/users/domains/: user.py
backend/users/users/interfaces/: repositories.py
backend/users/users/services/: user_service.py
backend/wallet/: pyproject.toml
backend/wallet/ml_service_wallet/: __init__.py  asgi.py  cli.py  service.py  settings.py
backend/wallet/ml_service_wallet/api/: __init__.py  router.py  service.py  settings.py
backend/wallet/ml_service_wallet/database/: __init__.py  repositories.py  service.py  settings.py
backend/wallet/ml_service_wallet/domains/: __init__.py  transaction.py  wallet.py
backend/wallet/ml_service_wallet/interfaces/: __init__.py  repositories.py
backend/wallet/ml_service_wallet/messaging/: handler.py
backend/wallet/ml_service_wallet/services/: __init__.py  wallet_service.py
backend/wallet/wallet/: __init__.py
backend/wallet/wallet/domains/: __init__.py  transaction.py
backend/wallet/wallet/interfaces/: __init__.py  repositories.py
backend/wallet/wallet/services/: __init__.py  wallet_service.py
backend/worker/: Dockerfile  main.py  pyproject.toml
backend/worker/ml_service_worker/: __init__.py  __main__.py  service.py  settings.py  worker.py
backend/worker/ml_service_worker/messaging/: handler.py
deploy/: .env.example  (+3 more)
frontend/: Cargo.toml  Dockerfile
frontend/src/: app.rs  credentials.rs  dashboard.rs  error.rs  lib.rs  main.rs  socketio.rs
frontend/src/clients/: api_client.rs  base_client.rs  config.rs  mod.rs
frontend/src/clients/model/: client.rs  mod.rs  models.rs
frontend/src/clients/users/: client.rs  mod.rs  models.rs
frontend/src/clients/wallet/: client.rs  mod.rs  models.rs
frontend/src/components/: auth.rs  dashboard.rs  history.rs  mod.rs  nav.rs  predict.rs
(+66 files in other folders)
