[project]
name = "autotests"
version = "0.1.0"
description = "autotests"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tests"]
