[project]
name = "service"
version = "0.1.0"
description = ""
authors = [{ name = "Yehor Ivanov", email = "ivanov.e.s@my.mgimo.ru" }]
requires-python = ">=3.14"
# readme = "README.md"
dependencies = [
    "ml_service",
]

[dependency-groups]
dev = [
    "pylint>=3.0.0,<4",
    "isort>=5.12.0,<6",
    "pytest>=7.4.2,<8",
    "pytest-asyncio>=0.21.1,<0.22",
]

[tool.uv]
package = false

[tool.uv.sources]
ml_service = { workspace = true }

[tool.uv.workspace]
members = [
    "ml_service",
    "database",
    "database_repository",
    "common",
    "users",
    "wallet",
    "model",
    "worker",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "hug"
