[project]
name = "ml_service_common"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.4",
    "facet>=0.5",
    "fastapi>=0.115",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "uvicorn>=0.30",
    "python-socketio>=5.11",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml_service_common"]
