[project]
name = "database"
version = "0.1.0"
description = "Database infrastructure: SQLAlchemy base, async session service, Alembic migrations"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.14",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "typer>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["database"]
