[project]
name = "database"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.14",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "typer>=0.12",
    "pyyaml>=6.0",
    "ml_service_common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["database"]

[tool.uv.sources]
ml_service_common = { workspace = true }
