[project]
name = "database-repository"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "database",
    "ml_service_common",
    "sqlalchemy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["database_repository"]

[tool.uv.sources]
database = { workspace = true }
ml_service_common = { workspace = true }
