[project]
name = "ml-service"
version = "0.1.0"
description = "ML service orchestrating users, wallet, and model packages"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "users",
    "wallet",
    "model",
    "database",
    "database-repository",
    "typer>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml_service"]

[tool.uv.sources]
users = { workspace = true }
wallet = { workspace = true }
model = { workspace = true }
database = { workspace = true }
database-repository = { workspace = true }
