[project]
name = "ml-service"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "users",
    "wallet",
    "model",
    "database",
    "database-repository",
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "email-validator>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml_service"]

[tool.uv.sources]
users = { workspace = true }
wallet = { workspace = true }
model = { workspace = true }
database = { workspace = true }
database-repository = { workspace = true }
