[project]
name = "model"
version = "0.1.0"
description = "ML Model domain package (domains, services, interfaces)"
requires-python = ">=3.14"
dependencies = [
    "users",
    "wallet",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model"]

[tool.uv.sources]
users = { workspace = true }
wallet = { workspace = true }
