[project]
name = "ml_service_users"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "database-repository",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml_service_users"]

[tool.uv.sources]
database-repository = { workspace = true }
