[project]
name = "wallet"
version = "0.1.0"
description = "Wallet domain package (domain, services, interfaces)"
requires-python = ">=3.14"
dependencies = [
    "users",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wallet"]

[tool.uv.sources]
users = { workspace = true }
