[project]
name = "ml_service_wallet"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = [
    "ml_service_users",
    "database-repository",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml_service_wallet"]

[tool.uv.sources]
ml_service_users = { workspace = true }
database-repository = { workspace = true }
