[project]
name = "ml_service_worker"
version = "0.1.0"
description = "RabbitMQ prediction worker for ml_service"
requires-python = ">=3.14"
dependencies = [
    "ml_service_common",
    "ml_service_wallet",
    "ml_service_model",
    "database-repository",
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml_service_worker"]

[tool.uv.sources]
ml_service_common = { workspace = true }
ml_service_wallet = { workspace = true }
ml_service_model = { workspace = true }
database-repository = { workspace = true }
