[project]
name = "ml_service_worker"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = [
    "ml_service_common",
    "database-repository",
    "facet>=0.5",
    "pydantic-settings>=2.0",
    "loguru>=0.7.3",
    "transformers>=4.40",
    "torch",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml_service_worker"]

[tool.uv.sources]
ml_service_common = { workspace = true }
database-repository = { workspace = true }

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
